--- a/session2/style.css
+++ b/session2/style.css
@@ -115,3 +115,10 @@ body
     align-items: center;
     justify-content: center;
 }
+.row
+{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    float: left;
+}
