--- a/session2/style.css
+++ b/session2/style.css
@@ -125,6 +125,7 @@ body
 
 .column.middle img
 {
-  width:100%;
-  float:left;
+  display: flex;
+    align-items: center;
+    justify-content: center;
 }
