--- a/session2/style.css
+++ b/session2/style.css
@@ -90,19 +90,7 @@ body
   flex: 2;
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media (max-width: 600px) {
-  .row {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
-  .row
-{
-  display: inline-block;
-    align-items: center;
-    justify-content: center;
-  }
-}
+
 
 .footer {
 	position: fixed;
@@ -120,5 +108,14 @@ body
 	display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media (max-width: 600px) {
+  .row
+{
+  display: inline-flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
